   - Peaceful Diplomacy no longer gives a construction speed buff but instead only the PP buff
  - Liberals:
   - Business Friendly now gives +10% corporate tax instead of just +10% office tax
   - Anti-Military now gives -15% military/dockyard output instead of -25%

 Graphics:
  - Fixed the USNA flag being incorrectly compressed causing it to not properly grab the formable flag

v1.11.1b

 AI:
  - AI should be more likely ratify NATO applicants if they are influenced by a NATO member, has high opinion and if any of their neighbors are emerging, nationalist or salafist
  - USA should be more apt to declare operation enduring freedom if there is less than 25% threat or if they have not done so before Jan 2005
  - SER will now seek to rebuild Yugoslavia in peace deals at half cost after completion of the appropriate focus

 Balance:
  - Reduced the passive counter intelligence gain from the "Counter-Intelligence" agency upgrade
  - Increased the gained acreage for Brazil for the Amazon Rainforest system
  - Added some triggers to the Brazilian content that you can't take decisions if you do not have the acreage to do it.
  - Reparations amount paid will now be scaled based off of the victim country GDP instead of the attacker

 Bugfix:
  - Fixed the Internal Faction event "Communist Cadres & The Military Fight Over Ideology" having incorrect options and opinion boosts
  - Fixed the "X Proposes Pre-emptive strike against Iran" event triggering twice for someone
  - Fixed Ukraine being 20 years ahead in Anti Air weaponry for No Step Back users
  - Fixed the Space Programs not showing up properly due to bad DLC checks
  - Fixed the Productivity & Unemployment Dynamic Modifier having the wrong modifier
  - Fixed the Chinese focus "String of Pearls"
  - Fixed the starting crash for Linux users due to bad unicode characters in the new terrain pictures
  - Fixed the Agricultural District Construction speed spazzing out at low and high productivity