@@ -485,8 +485,8 @@ ideas = {
 			}
 
 			modifier = {
-				industrial_capacity_factory = -0.25
-				industrial_capacity_dockyard = -0.25
+				industrial_capacity_factory = -0.15
+				industrial_capacity_dockyard = -0.15
 			}
 		}
 
@@ -741,6 +741,26 @@ ideas = {
 				political_power_gain = 0
 			}
 		}
+		IP_good_connections = {
+			on_add = { log = "[GetDateText]: [Root.GetName]: add idea IP_good_connections" }
+			allowed = {
+				always = yes
+			}
+
+			allowed_civil_war = {
+				always = yes
+			}
+
+			cancel = {
+				NOT = {
+					is_in_array = { ruling_party = 15 }	#oligarchs
+				}
+			}
+
+			modifier = {
+				resource_export_multiplier_modifier = 0.10
+			}
+		}
 		IP_emergency_powers = {
 			on_add = { log = "[GetDateText]: [Root.GetName]: add idea IP_emergency_powers" }
 			allowed = {
@@ -762,7 +782,7 @@ ideas = {
 			}
 
 			modifier = {
-				army_advisor_cost_factor = -0.25
+				party_popularity_stability_factor = 0.25
 			}
 		}
 		IP_yes_men_army = {
@@ -970,8 +990,7 @@ ideas = {
 
 			modifier = {
 				conscription = 0.005
-				training_time_factor = -0.15
-				unit_upkeep_attrition_factor = 0.10
+				training_time_factor = -0.10
 			}
 		}
 	}
