@@ -180,12 +180,6 @@ calculate_tax_gain = {
 	# Commercialized Agriculture Districts - (Agricultural Districts) * 2.25
 	# Offices - (Offices) * 5
 	set_variable = { civil_fac_tax = industrial_complex_total }
-	if = {
-		limit = {
-			is_in_array = { ruling_party = 15 }	#oligarchs
-		}
-		multiply_variable = { civil_fac_tax = 1.1 }
-	}
 	multiply_variable = { civil_fac_tax = 2.5 }
 	set_variable = { military_fac_tax = military_fac }
 	multiply_variable = { military_fac_tax = 0.2 }
