@@ -9043,6 +9043,13 @@ IP_idea_on_startup_configuration = {
 	}
 	if = {
 		limit = {
+			is_in_array = { ruling_party = 15 }	#oligarchs
+			NOT = { has_idea = IP_good_connections }
+		}
+		add_ideas = IP_good_connections
+	}
+	if = {
+		limit = {
 			OR = {
 				non_technocrats_western_autocrats_are_in_power = yes
 				is_in_array = { ruling_party = 7 }	#Emerging autocrats
@@ -9335,6 +9342,13 @@ IP_idea_weekly_configuration = {
 			}
 		}
 		update_pp_bonus_from_corruption = yes
+	}
+	if = {
+		limit = {
+			is_in_array = { ruling_party = 15 }	#oligarchs
+			NOT = { has_idea = IP_good_connections }
+		}
+		add_ideas = IP_good_connections
 	}
 	if = {
 		limit = {
