@@ -145,3 +145,45 @@ defined_text = {
 		localization_key = "IP_liberal_anti_military_tooltip2_key"
 	}
 }
+defined_text = {
+	name = IP_autocrat_scratch_my_back_tooltip
+
+	text = {
+		localization_key = "IP_autocrat_scratch_my_back_tooltip_key"
+	}
+}
+defined_text = {
+	name = IP_autocrat_good_connections_tooltip
+
+	text = {
+		localization_key = "IP_autocrat_good_connections_tooltip_key"
+	}
+}
+defined_text = {
+	name = IP_autocrat_emergency_powers_tooltip
+
+	text = {
+		localization_key = "IP_autocrat_emergency_powers_tooltip_key"
+	}
+}
+defined_text = {
+	name = IP_autocrat_yes_men_army_tooltip1
+
+	text = {
+		localization_key = "IP_autocrat_yes_men_army_tooltip1_key"
+	}
+}
+defined_text = {
+	name = IP_autocrat_yes_men_army_tooltip2
+
+	text = {
+		localization_key = "IP_autocrat_yes_men_army_tooltip2_key"
+	}
+}
+defined_text = {
+	name = IP_autocrat_yes_men_army_tooltip3
+
+	text = {
+		localization_key = "IP_autocrat_yes_men_army_tooltip3_key"
+	}
+}
