@@ -339,7 +339,7 @@
 	clear_variable = lba_oil_nationalisation_temp
 
 	#Gaddafi family
-	set_variable = { gaddafi_family_instability = 10 }
+	set_variable = { gaddafi_family_instability = 20 }
 	set_variable = { gaddafi_family_instability_decay = -2 }
 	set_variable = { gaddafi_family_stability_effect = gaddafi_family_instability }
 	multiply_variable = { gaddafi_family_stability_effect = -0.005 }
