@@ -48,7 +48,7 @@
  IP_modest_corruption_pp_bonus: "Modest Corruption Political Power Bonus"
  IP_slight_corruption_pp_bonus: "Slight Corruption Political Power Bonus"
  IP_negligible_corruption_pp_bonus: "Negligible Corruption Political Power Bonus"
- IP_emergency_powers: "Unlimited Power"
+ IP_emergency_powers: "Power Through Strength"
  IP_paramilitary_units_formed: "[ROOT.GetAdjective] Youth Guard"
  IP_paramilitary_units_formed_desc: "A paramilitary unit for [ROOT.GetAdjective] has been formed to get them accustomed to military life."
  IP_good_old_days: "Good Old Days"
@@ -68,6 +68,7 @@
  IP_high_risk_investment: "High Risk Investments"
  IP_invisible_hand: "Invisible Hand"
  IP_business_friendly_environment: "Business Friendly"
+ IP_good_connections: "Good Connections"
  IP_keep_it_in_the_family: "Keep it in the Family"
  IP_for_king_and_queen: "For King and Queen"
  IP_religious_law_emerging: "Sharia Law"
@@ -167,13 +168,19 @@
  IP_liberal_anti_military_delayed: "§LWar is bad for business and so it should be avoided at all cost. It is better to focus on the civilian sector and wealth generation. Why topple a dictator with a horrible human rights record when you can make money with them by abusing those human rights!§!"
  IP_autocrat_category_desc: "§YAutocrats§!\nPowers available to:\n[Western_Autocracy_scripted_loc]\n[Autocracy_L]\n[Neutral_Autocracy_L]\n[oligarchism_L]\n[Nat_Fascism_L]\n[Nat_Autocracy_L]"
  IP_autocrat_category_desc_delayed: "§LAutocrats rely on the power of strongmen (and in rare cases strongwomen) to to run the country. The demagogues are not afraid to use questionable methods and backroom deals to get what they want. Autocrats will have an easier time tolerating high corruption and holding control of the nation with an iron fist.§!"
- IP_autocrat_scratch_my_back: "§YCronyism§!\nDaily Political Power Gain: §G+0.3§! per §YCorruption Level§! above §YNegligible Corruption§!"
+ IP_autocrat_scratch_my_back: "§YCronyism§!\n[IP_autocrat_scratch_my_back_tooltip]: §G+0.3§! per §YCorruption Level§! above §YNegligible Corruption§!"
+ IP_autocrat_scratch_my_back_tooltip_key: "$MODIFIER_POLITICAL_POWER_GAIN$"
  IP_autocrat_scratch_my_back_delayed: "§LPutting close friends and relatives into important positions in the government will guarantee easier deal making. Some call this corruption, we call it ensuring loyalty.§!"
- IP_autocrat_good_connections: "§YGood Connections§!\nIncreasing the §YOpinion§! of §YInternal Factions§! is more effective\n\nIf ruled by [oligarchism_L], this bonus is replaced with:\nTax Revenue from Civilian Industries: §G+10%§!"
+ IP_autocrat_good_connections: "§YGood Connections§!\nIncreasing the §YOpinion§! of §YInternal Factions§! is more effective\n\nIf ruled by [oligarchism_L], this bonus is replaced with:\n[IP_autocrat_good_connections_tooltip]: §G+10.00%§!"
+ IP_autocrat_good_connections_tooltip_key: "$resource_export_multiplier_modifier$"
  IP_autocrat_good_connections_delayed: "§LOur rule is cemented in place by strong supporters. The clandestine groups are perfectly happy knowing that the government has their back.§!"
- IP_autocrat_emergency_powers: "§YUnlimited Power§!\nArmy Advisor Cost: §G-25%§!\n\nIf ruled by [Nat_Fascism_L], this bonus is replaced with:\nCan form §YParamilitary Units§! through §YDecisions§!"
- IP_autocrat_emergency_powers_delayed: "§LAs strong rulers of our country, we don't have to go through the bureaucracy and red tape of a parliament or a senate. Things happen when we want them to happen.§!"
- IP_autocrat_yes_men_army: "§YArmy of Yes-Men§!\nArmy Experience Gain: §R-15.0%§!\nNavy Experience Gain: §R-15.0%§!\nAir Experience Gain: §R-15.0%§!"
+ IP_autocrat_emergency_powers: "§YPower Through Strength§!\n[IP_autocrat_emergency_powers_tooltip]: §G+25%§!\n\nIf ruled by [Nat_Fascism_L], this bonus is replaced with:\nCan form §YParamilitary Units§! through §YDecisions§!"
+ IP_autocrat_emergency_powers_tooltip_key: "$MODIFIER_STABILITY_POPULARITY_FACTOR$"
+ IP_autocrat_emergency_powers_delayed: "§LA strong country must be ruled b a strong leader. We must show our people all the things we can achieve, and they will never rise against us.§!"
+ IP_autocrat_yes_men_army: "§YArmy of Yes-Men§!\n[IP_autocrat_yes_men_army_tooltip1]: §R-15.0%§!\n[IP_autocrat_yes_men_army_tooltip2]: §R-15.0%§!\n[IP_autocrat_yes_men_army_tooltip3]: §R-15.0%§!"
+ IP_autocrat_yes_men_army_tooltip1_key: "$MODIFIER_XP_GAIN_ARMY_FACTOR$"
+ IP_autocrat_yes_men_army_tooltip2_key: "$MODIFIER_XP_GAIN_NAVY_FACTOR$"
+ IP_autocrat_yes_men_army_tooltip3_key: "$MODIFIER_XP_GAIN_AIR_FACTOR$"
  IP_autocrat_yes_men_army_delayed: "§LWhile having a loyal officer cadre is the core of holding power, being surrounded by yes-men and bootlickers can lead to us completely being misinformed on the quality of our military. Turns out that people who are afraid of losing their job or worse lie to save their own skin.§!"
  IP_monarchist_category_desc: "§YMonarchists§!\nPowers available to:\n[Kingdom_L]\n[Monarchist_L]"
  IP_monarchist_category_desc_delayed: "§LMonarchists rely on lineage and glory to rule over countries. Focusing power into one family has its benefits. This family brings power and monarchs are good at inspiring their people.§!"
