@@ -18,6 +18,10 @@ v1.11.2
   - Liberals:
    - Business Friendly now gives +10% corporate tax instead of just +10% office tax
    - Anti-Military now gives -15% military/dockyard output instead of -25%
+  - Autocrats:
+   - Good Connections now gives oligarchs +10% resource export income rather than civilian factory income
+   - Replaced Unlimited Power (-25% Advisor Cost) with Power Through Strength (+25% Party Popularity Stability Modifier)
+   - Paramilitary unit decision for fascists no longer increases unit attrition
 
  Graphics:
   - Fixed the USNA flag being incorrectly compressed causing it to not properly grab the formable flag
